@@ -1,3 +1,9 @@
+2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/coherence_upnp/coherence_upnp.py: Mark some strings
+	as translatable and ensure gettext is imported to the Coherence
+	plugin.
+
 ============ Version 2.25.92
 
 2009-03-03  Bastien Nocera  <hadess@hadess.net>
